--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,36 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+cmake-build-debug/Testing/Temporary/LastTest.log
+cmake-build-debug/CMakeFiles/TargetDirectories.txt
+cmake-build-debug/CMakeFiles/rules.ninja
+cmake-build-debug/CMakeFiles/CMakeOutput.log
+cmake-build-debug/CMakeFiles/cmake.check_cache
+cmake-build-debug/CMakeFiles/clion-log.txt
+cmake-build-debug/CMakeFiles/clion-environment.txt
+cmake-build-debug/CMakeFiles/3.23.2/CompilerIdC/CMakeCCompilerId.c
+cmake-build-debug/CMakeFiles/3.23.2/CMakeSystem.cmake
+cmake-build-debug/CMakeFiles/3.23.2/CMakeRCCompiler.cmake
+cmake-build-debug/CMakeFiles/3.23.2/CMakeDetermineCompilerABI_C.bin
+cmake-build-debug/CMakeFiles/3.23.2/CMakeCCompiler.cmake
+cmake-build-debug/CMakeCache.txt
+cmake-build-debug/cmake_install.cmake
+cmake-build-debug/build.ninja
+cmake-build-debug/.ninja_log
+cmake-build-debug/.ninja_deps
+cmake-build-debug/.cmake/api/v1/reply/toolchains-v1-3e6b1741ae38f0623953.json
+cmake-build-debug/.cmake/api/v1/reply/target-Homework_C-Debug-7df877bd628857a02c91.json
+cmake-build-debug/.cmake/api/v1/reply/index-2022-11-21T05-02-19-0519.json
+cmake-build-debug/.cmake/api/v1/reply/directory-.-Debug-d0094a50bb2071803777.json
+cmake-build-debug/.cmake/api/v1/reply/codemodel-v2-b6eb62d261764fde8502.json
+cmake-build-debug/.cmake/api/v1/reply/cmakeFiles-v1-930cb411286758adcd78.json
+cmake-build-debug/.cmake/api/v1/reply/cache-v2-b870f09ac1cea1037792.json
+cmake-build-debug/.cmake/api/v1/query/toolchains-v1
+cmake-build-debug/.cmake/api/v1/query/codemodel-v2
+cmake-build-debug/.cmake/api/v1/query/cmakeFiles-v1
+cmake-build-debug/.cmake/api/v1/query/cache-v2
+.idea/vcs.xml
+.idea/modules.xml
+.idea/misc.xml
+.idea/Homework.C.iml
+.idea/.name
